Manually enter screen dimensions moves to fix gaps
- some weirdness near screen boundaries that caused jumps / missing
  components

--- a/src/components/AppBar/index.less
+++ b/src/components/AppBar/index.less
@@ -87,7 +87,7 @@ header.ant-layout-header.App-Bar {
   padding: 16px 24px;
   align-items: center;
   justify-content: space-between;
-  @media (min-width: @screen-sm-min) {
+  @media (min-width: 769px) {
     display: none;
   }
 
