--- a/src/styles/defaults.less
+++ b/src/styles/defaults.less
@@ -88,7 +88,7 @@ p {
     border: 1px solid rgba(255,255,255,0.2);
   }
 
-  @media (max-width: @screen-sm-min) {
+  @media (max-width: 768px) {
     width: 100% !important;
     top:0 !important;
     max-width: 100% !important;
@@ -211,7 +211,7 @@ p {
     background: rgba(255, 255, 255, 0.05) !important;
     border-radius: 12px;
     padding: 48px;
-    @media (max-width: @screen-sm-min) {
+    @media (max-width: 768px) {
       padding: 30px;
       min-height: 90vh !important;
     }
